<resources>
    <string name="app_name">Action Bar</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_record">Record Video</string>
    <string name="action_save">Save</string>
    <string name="action_label">Add Label</string>
    <string name="action_play">Play Video</string>
    <string name="hello_world">Hello world!</string>
    <string name="share">Share</string>
</resources>
