<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_record"
        android:icon="@drawable/ic_videocam_white_48dp"
        android:title="@string/action_record"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_48dp"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_label"
        android:icon="@drawable/ic_fiber_new_white_48dp"
        android:title="@string/action_label"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_play"
        android:icon="@drawable/ic_play_arrow_white_48dp"
        android:title="@string/action_play"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
</menu>